<resources>
    <string name="app_name">Live UmHajj</string>
    <string name="car_rent">Car Rent</string>
    <string name="bus_station">Bus Stop</string>
    <string name="gas">Gas</string>
    <string name="money_exchange">Money Exchange</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="hospital">Hospital</string>
    <string name="shop">Shop</string>
    <string name="atm">ATM</string>
    <string name="restaurant">Restaurant</string>
    <string name="prayer_menu">Prayer Menu</string>
    <string name="mosque">Mosque</string>
    <string name="qibla">Qibla</string>
    <string name="salat_schedule">Salat Schedule</string>
    <string name="live_guide">LIVE</string>
    <string name="action_settings">Settings</string>
    <string name="compass_dial">Compass Dial</string>
    <string name="compass_hands">Compass Hands</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok">Settings</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="msg_permission_granted">Location Access Granted, press GPS button now.</string>
    <string name="toast_permission_required">This app requires Access Location</string>
    <string name="your_location">Your Location:</string>
    <string name="location_not_ready">Location not ready, please press button again.</string>
    <string name="qibla_direction">Kaaba Direction:</string>
    <string name="pls_enable_location">Please turn on Location and press the button again.</string>
    <string name="degree_from_north">degrees from the north.</string>
    <string name="using_last_location">using last location.</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="asar">Asar</string>
    <string name="magrib">Magrib</string>
    <string name="isya">Isya</string>
    <string name="prayer_list">Prayer List</string>
    <string name="pray_title_one">Prayer Traveling</string>
    <string name="pray_detail_one">\"O Allah, you are a travel companion and a substitute in the family. O Allah, I take refuge in You from the hardships of the journey, the sadness of the place of return, the prayers of the persecuted, and from the sad outlook on family and property.\" (HR. Tirmdzi and Ibnu Majah with authentic sahad</string>
    <string name="pray_arab_one" translatable="false">اللَّهُمَّ أَنْتَ الصَّاحِبُ فِى السَّفَرِ وَالْخَلِيفَةُ فِى الأَهْلِ اللَّهُمَّ إِنِّى أَعُوذُ بِكَ مِنْ وَعْثَاءِ السَّفَرِ وَكَآبَةِ الْمَنْظَرِ وَسُوءِ الْمُنْقَلَبِ فِى الْمَالِ وَالأَهْلِ
       ِ"Allahumma antash shoohibu fis safar, wal kholiifatu fil ahli. Allahumma inni a’udzubika min wa’tsaa-is safari wa ka-aabatil manzhori wa suu-il munqolabi fil maali wal ahli.
    "</string>
    <string name="pray_title_two">Prayer Riding In Vehicles</string>
    <string name="pray_arab_two" translatable="false">
        سُبْحَانَ الَّذِىْ سَخَّرَلَنَا هَذَا وَمَاكُنَّالَهُ مُقْرِنِيْنَ وَاِنَّآ اِلَى رَبِّنَا لَمُنْقَلِبُوْنَ
    "Subhaanalladzii sakkhoro lanaa hadza wama kunna lahu muqriniin wa-inna ilaa rabbina lamunqalibuun
    "</string>
    <string name="pray_title_three">Prayer for the Assembly of Sinners</string>
    <string name="pray_arab_three" translatable="false">
        سُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ، أَشْهَدُ أَنْ لاَ إِلَـٰهَ إِلاَّ أَنْتَ، أَسْتَغْفِرُكَ، وَأَتُوْبُ إِلَيْكَ
    "Subhanakallaahumma wa bihamdika, asyhadu al-laa ilaaha illaa anta, astaghfiruka, wa atuubu ilaik
    "</string>
    <string name="pray_title_five">Prayer Entering The Toilet</string>
    <string name="pray_arab_five" translatable="false">
        اللهم اِنِّيْ اَعُوْذُبِكَ مِنَ الْخُبُثِ وَالْخَبَآئِثِ
    "Allaahumma Innii a’uudzubika minal khubutsi wal khabaaitsi.
    "</string>
    <string name="pray_title_six">Prayer Exit The Toilet</string>
    <string name="pray_arab_six" translatable="false">
        غُفْرَانَكَ الْحَمْدُ الِلّٰهِ الَّذِىْ اَذْهَبَ عَنِّى اْلاَذَى وَعَافَانِىْ
    "Ghufraanaka. Alhamdulillaahil ladzii adzhaba ‘annil adzaa wa’aafaanii
    "</string>
    <string name="pray_title_seven">Prayer Before Eating</string>
    <string name="pray_arab_seven" translatable="false">
        اَللَّهُمَّ بَارِكْ لَنَا فِيْمَا رَزَقْتَنَا وَقِنَا عَذَابَ النَّارِ
    "Alloohumma barik lanaa fiimaa razaqtanaa waqinaa ‘adzaa bannar
    "</string>
    <string name="pray_title_eight">Prayer After Eating</string>
    <string name="pray_arab_eight" translatable="false">
        اَلْحَمْدُ ِللهِ الَّذِيْنَ اَطْعَمَنَا وَسَقَانَا وَجَعَلَنَا مِنَ الْمُسْلِمِيْنَ
    "Alhamdu lillahhil-ladzi ath-amanaa wa saqaana waja’alanaa minal muslimiin.
    "</string>
    <string name="pray_title_nine">Prayer To Enter The Mosque</string>
    <string name="pray_arab_nine" translatable="false">
        اَللّٰهُمَّ اِنِّى اَسْأَلُكَ مِنْ فَضْلِكَ
    "Allahumma innii asaluka min fadlik
    "</string>
    <string name="pray_title_ten">Prayer After Adhan</string>
    <string name="pray_arab_ten" translatable="false">
        للهُمَّ رَبَّ هذِهِ الدَّعْوَةِ التَّآمَّةِ، وَالصَّلاَةِ الْقَآئِمَةِ، آتِ مُحَمَّدَانِ الْوَسِيْلَةَ وَالْفَضِيْلَةَ وَالشَّرَفَ وَالدَّرَجَةَ الْعَالِيَةَ الرَّفِيْعَةَ وَابْعَثْهُ مَقَامًامَحْمُوْدَانِ الَّذِىْ وَعَدْتَهُ اِنَّكَ لاَتُخْلِفُ الْمِيْعَادَ
    "Allaahumma robba haadzihid da’watit taammah, washsholaatil qoo-imah, aati muhammadanil washiilata wal fadhiilah, wasysyarofa, wad darajatal, ‘aaliyatar rofii’ah, wab’atshu maqoomam mahmuudanil ladzii wa’adtah, innaka laa tukhliful mii’aadz.
    "</string>
    <string name="pray_arab_eleven" translatable="false">
        نَوَيْتُ العُمْرَةَ وَأَحْرَمْتُ بِهَا لِلهِ تَعَالَى لَبَّيْكَ اللَّهُمَّ بعُمْرَة
    "nawaitul ‘umrata wa ahramtu bihi lillahi ta’ala labbaika Allahumma ‘umratan.
    "</string>
    <string name="pray_arab_twelve" translatable="false">
    سُبْحَانَ اللهِ وَالْحَمْدُ لِلَّهِ وَلَا إِلَهَ إِلَّا اللهَ اللهُ أَكْبَرُ. وَلَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللهِ الْعَلِيِّ الْعَظِيْمِ. وَالصَّلَاةُ وَالسَّلاَمُ عَلَى رَسُولِ اللهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ. اللَّهُمَّ إِيْمَانًا بِكَ وَتَصَدِّيْقًا بِكِتَابِكَ وَوَفَاءاً بِعِبَادِكَ وَاتِّبَاعًا لِسُنَّةِ نَبِيِّكَ مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ. اللَّهُمَّ إِنِّي أَسْئَلُكَ الْعَفْوَى وَالْعَافِيَةَ الدَّائِمَةَ فِي الدِّيْنِ وَالدُّنْيَا وَالْأَخِرَةَ وَالْفَوْزَ بِالْجَنَّةِ وَالنَّجَاةِ مِنَ النَّارِ
    "Subahaanallaahi walhamdulillaahi wa laa ilaaha illallaahu allahu akbar. wa laa haula wa laa quwwata illaa billaahil ‘aliyyil ‘azhiimi. Wash shalaatu wassalaamu’alaa rasuulillaaahi shallallaahu ‘alaihi wa sallama. Allahumma iimaanan bika wa tashdiqan bikitaabika wa wafaa’an bi’aadhika wattibaa’an li sunnati nabiyyika muhammadin shallaahu ‘alaihi wa sallama. Allahumma inni as’alukal ‘afwa wal ‘aafiya wal mu’aafatan daaimata fid diini wad dunyaa wal aakhirati wal fauza bil jannati wannajaata minannaari.
    "</string>
    <string name="pray_arab_thirteen" translatable="false">
    اللَّهُمَّ إِنََ هَذَا الْبَيْتَ بَيْتُكَ وَالْحَرَاَم حَرَامُكَ وَالْأَمْنَ أَمْنُكَ وَالْعَبْدَ عَبْدُكَ وَأَنَا عَبْدُكَ وَابْنُ عَبْدِكَ وَهَذَا مَقَامُ عَيْذُكَ بِكَ مِنْ النَّارِ فَحَرِّمْ لُحُومُنَا وَبَشِّرْنَا عَلَى النَّارِ اللَّهُمَّ حَبِّبْ إِلَيْنَا الْإيْمَانَ وَزَيِّنْهُ فِي قَلُوبِنَا وَكَرِّهْ إِلَيْنَا الْكُفْرَ وَالْفُسُوقَ وَالْعِصْيَانَ وَاجْعَلْنَا مِنَ الرَّاشِدِينَ اللَّهُمَّ قِنِي عَذَابَكَ الْيَوْمَ تَبْعَثُ عِبَادَكَ اللُّهُمَّ ارْزُقْنَا الْجَنَّةَ بِغَيْرِ حِسَابٍ
    "Allahumma innaa haadzal baita baituka wal haraama haraamuka wal amna amnuka wal ‘abda ‘abduka wa anaa ‘abduka wabnu ‘abdika wa haadzaa maqaamu ‘aidza bika minannaari faharrim luhuumanaa wa basyaranaa ‘alannaari. Allahumma habbib ilainal iimaana wa zayyinhu fii quluubinaa wa karrih ilainal kufra wal fusuuqa wal ‘ishyaanaa waj’alnaa minar raasyidiina. ALlahumma qinii ‘adzaabaka yauma tab’atsu ‘ibaadaka. Allahummarzuqnal jannata bighairi hisaabin.
    "</string>
    <string name="pray_arab_fourteen" translatable="false">
    اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِن الشَّكِّ وَالشِرْكِ والشِّقَاقِ والنِّفَاقِ وسُوءِ الأَخْلاَقِ وَسُوءِ المَنْظَرِ وَالمُنْقَلِبِ فِي المَالِ والأَهْلِ والوَلَدِ اللَّهُمَّ إِنِّي أَسْألُكَ رِضَاكَ والجَنَّةَ وأَعُوذُبِكَ مِن سَخَطِكَ والنَّارِ وَاالهَمِّ إِنِّي أَعُوذُبِكَ مِنْ فِتْنَةِ القُبُرِ وأَعُوذُ بِكَ مِن فِتْنَةِ المَحْيَا والمَمَاتِ
    "Allahumma inni a’udzubika minasysyakki wasysyirki wasysyiqaaqi wannifaaqi wa suu’il akhlaaqi wa suu’il manzhari wal munqalabi fil maali wal ahli wal waladi. Allahumma innii as’aluka ridhaaka wal jannata wa a’udzubika min shkathika wannaar. Allahumma innii a’udzubika min fitnatil qabri wa a’udzubika min fitnatil mahyaa wal mamaati.
    "</string>
    <string name="pray_arab_fifteen" translatable="false">
    اللَّهُمَّ اجْعَلْنِي حَجًّا مَبْرُورًا وَسَعْياً مَشْكُورًا وَذُنُباً مَغْفُورًا وَعَمَلًا صَالِحًا مَقْبُولًا وَتِجًارَةً لًنْ تَبُورًا. يَا عَالِمً مَا فِي الصُّدُورِِ أَخْرِجْنِي مِن الظُّلُمَاتِ إِلَى النُورِ، اللَّهُمَّ إِنِّي أَسْأَلُكَ مُوجِبَاتِ رَحْمَتِكَ وَعَزَائِمَ مَغْفِرَتِكَ وَالسَّلاَمَةَ مِن كُلِّ إِثْمٍ والغَنِيمَةَ مِن كُلِّ بِرٍّ والفَوْزَ بِالجَنَّةِ مِن النَّارِ رَبِّي قَنِّعْنِي بِمَا رَزَفَنِي وَبَارِكْ لِي فِيمَا أَعْطَيْتَنِي وَاخْلُفْ عَلَيْنَا كُلَّ غَيْبَةٍ مِنْكَ بِخَيْرٍ
    "Allahummaj’alnii hajjan mabruuran wa sa’yan masykuuran wa dzanban maghfuura wa ‘amalan shaalihan maqbuulan wa tijaaratan lan tabuura. Ya ‘aalima maa fish shuduuri akhrijnii minazh zhulumaati ilannuri. ALlahumma inni as ‘aluka mujibaati rahmatika wa ‘azaa’imi maghfiratika wassalaaamata min kulli itsmin wal ghaniimata min kulli birrin wal fauza bil jannati wannajaata minannaari. Rabbi qanni’nii bimaa razaqtanii wa baariklii fiimaa ‘athaitanii wakhluf ‘alaynaa kulla ghaibatin minka bikhairin.
    "</string>
    <string name="pray_arab_sixteen" translatable="false">
    أللَّهُمَّ أَظِلَّنِي تَحْتَ ظِلِّ عَرْشِكَ يَوْمَ لاَ ظِلَّ إِلَّا ظِلَّكَ وَلَا بَقِيَ إِلَّا وَجْهَكَ وَأَسْفِنِي مِنْ حَوْضِ نَبِيِّكَ مُحَمَّدٍ صَلَّى اللهُ عَلَيْكَ وسَلَّم شُرْبَةً هَنِيئَةً مَرِيئَةً لَا أَظَؤُ بَعْدَهَا أَبَدًا. أللَّهُمَّ إِنِّي أَسْأَلُكَ مِنْ خَيْرٍ مَا سَأَلَكَ مِنهُ نَبِيُّكَ مُحَمَّدٌ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ وَأَعُوُذُبِكَ مِنْ شَرِّ مَا عَاذَكَ مِنْهُ نَبِيُّكَ مُحَمَّدٌ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ اللَّهُمَّ إِنِّي أَسْأَلُكَ الجَنَّةَ وَنَعِيمَهَا وَمَا يُقَرِّبُنِي إِلَيْهَا مِنْ قَوْلٍ أَوْ فِعْلٍ أَوْ عَمَلٍ وَأَعُوذُبِكَ مِنَ النَّارِ وَمَا يُقَرِّبُنِي إِلَيْهَا مِنْ قَوْلٍ أَْو فِعْلٍ أَوْ عَمَلٍ
    "Allahumma azhillanii tahta zhilli ‘arsyika yauma laa zhilla illaa zhilluka walaa baqiya illaa wajhuka wa asqini min haudhi nabiyyika muhammadin shallallaahu ‘alaihi wasallama syurbatan haniii’atan marii’atan laa azah’u ba’dahaa abadan. Allahumma innii as’aluka min khairi maa sa’alaka minhu nabiyyiuka muhammadun shallallaahu ‘alaihi wa sallama wa a’uudzubika min syarri maa ‘aadzaka minhu nabiyyuka muhammadun shallallahu ‘alaihi wa sallama. Allahumma innii as’alukal jannata wa na’iimahaa wa maa yuqarribunii ilaihaa min qaulin au fi’lin au ‘amalim wa a’udzubika minannaari wa maa yuqaarribunii ilaihaa min qaulin au fi’lin au ‘amalain.
    "</string>
    <string name="status">Status</string>
    <string name="destination_call">123 for conference call</string>
    <string name="call">Call</string>
    <string name="end_call">End Call</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="button_login">Log In</string>
    <string name="send_pin">Send PIN</string>
    <string name="log_out">Logout</string>
</resources>