<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2010 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout android:padding="12dp"
        android:id="@+id/mainlayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        >
        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sip_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sip_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sip_username"
                android:hint="@string/password"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sip_password"
                android:layout_alignParentRight="true"
                android:text="@string/button_login"
                />
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sip_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        >
        <TextView
            android:id="@+id/sip_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            />
        <TextView
            android:id="@+id/sipLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sip_status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sipLabel"
            android:hint="@string/destination_call"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sip_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sip_destination"
            android:text="@string/call"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/end_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sip_call"
            android:text="@string/end_call"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_call"
            android:text="@string/send_pin"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_pin"
            android:text="@string/log_out"
            />

    </RelativeLayout>
    </RelativeLayout>
</FrameLayout>