<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalatActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
        <TableLayout
            android:id="@+id/table_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/iv_play"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_subuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/value_subuh"
                    android:text="@string/subuh"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/value_subuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_subuh"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="10:00"
                    />
            </TableRow>
            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_dzuhur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/value_dzuhur"
                    android:text="@string/dzuhur"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/value_dzuhur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_dzuhur"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="00:00"
                    />
            </TableRow>
            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_asar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/value_asar"
                    android:text="@string/asar"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/value_asar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_asar"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="00:00"
                    />
            </TableRow>
            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_magrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/value_magrib"
                    android:text="@string/magrib"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/value_magrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_magrib"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="00:00"
                    />
            </TableRow>
            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_isya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/value_isya"
                    android:text="@string/isya"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/value_isya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_isya"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="00:00"
                    />
            </TableRow>
        </TableLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_schedule"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_share"
                android:src="@android:drawable/ic_media_play"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_schedule"
                app:layout_constraintLeft_toRightOf="@id/iv_play"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@android:drawable/ic_menu_share"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>